learning from first tutorial

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<body>
+<body>  
+<center>
 <h1>Hello World</h1>
-test test test
 <img src="yerali.jpg"/>
+<P> test test test </P>
 </body>
 </html>
 
