--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <HTML><HEAD><TITLE>homepage </TITLE></HEAD>
 
 <BODY> 
- <H1 ALIGN=CENTER> <span style="display:inline-block; width: 8cm;"></span> Y&eacuterali Gandica - Homepage <span style="display:inline-block; width: 6cm;"></span> <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  </A> </H1> 
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Homepage <span style="display:inline-block; width: 4cm;"></span> <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  &emsp; </A>  <A HREF="course.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> </H1> 
 
 <HR ALIGN=LEFT> I got a PhD in Physics from the Venezuelan Institute for Research (IVIC), with a recognized diploma in Europa. I have 7 years of experience among 4 Postdoctoral positions in Europe. As a second background, I have complemented my PhD following several courses on Sociology (the first three years of this major). I also have a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups. Currently, I am Visiting Fellow at the Complexity Institute. NTU. Singapore. </HR> 
 
-<H2 ALIGN=CENTER> <img src="yo.png" WIDTH=250/>  </H2> 
+<H2 ALIGN=CENTER> <img src="yo.png" WIDTH=250/>  
+<span style="display:inline-block; width: 2cm;"></span>
+<img src="dicho.png" WIDTH=350/> </H2> 
 
 <HR ALIGN=LEFT>
 My main interest in research is the application of statistical and Critical Phenomena approaches to emergent social phenomena. The possibility of finding universal patterns, i.e, same qualitative behavior in different kind of phenomena. The similarity comes from the fact that collective emerging phenomena do not depend on the microscopic details of the process. The determinant properties are instead the symmetries, dimensionality, and conserved quantities. The theory implied on this methodology is the foundation for the field of Critical Phenomena, which has proved to be fruitful in allowing for the understanding of several patterns of universality.<P>
