--- a/course.html
+++ b/course.html
@@ -14,6 +14,6 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 </OL>
 
-<CENTER><H2>  <font size="6">     <font color="blue">   Material to download coming soon!!!!   </font> </font> </H1>  
+<CENTER><H2>  <font size="6">     <font color="blue">   Material to download is coming soon!!!!   </font> </font> </H1>  
 
 </BODY></HTML>
