--- a/course.html
+++ b/course.html
@@ -1,6 +1,6 @@
 <HTML><HEAD><TITLE>Introduction to network science</TITLE></HEAD> <BODY BACKGROUND="networks2.png" text="black" TEXT="#AA0000">
 
-<CENTER><H1>Introduction to network science</H1></CENTER><HR>Introductory tutorial aimed at any researcher interested on getting  started into the fields of Network Science. We will begin by installing some basic packages and talking about elemental notions. However, the level of learning will be quickly progressing, addressing the key topics, until arriving at the current subjects of research.<P> 
+<CENTER><H1>Introduction to Network Science</H1></CENTER><HR>Introductory tutorial aimed at any researcher interested on getting  started into the fields of Network Science. We will begin by installing some basic packages and talking about elemental notions. However, the level of learning will be quickly progressing, addressing the key topics, until arriving at the current subjects of research.<P> 
 
 The only prerequisites for the course are knowing python, curiosity and being willing to learn! For a better benefit of the course, it is recommended to have the programs already installed on your computers. The programs\packages are:
 
