--- a/older_index2.html
+++ b/older_index2.html
@@ -1,32 +1,18 @@
-<HTML>
-<HEAD><TITLE>homepage </TITLE>
-
-<LINK rel="stylesheet" href="main.css">
-
-</HEAD>
+<HTML><HEAD><TITLE>homepage </TITLE></HEAD>
 
 <BODY> 
-  <!-- <SECTION style="background: #ff66ff"> -->
-    <SECTION>
- <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Homepage <span style="display:inline-block; width: 4cm;"></span> <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  &emsp; </A>  <A HREF="course.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> </H1>
-</SECTION>
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Homepage <span style="display:inline-block; width: 4cm;"></span> <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  &emsp; </A>  <A HREF="course.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> </H1> 
 
-<HH1>
-<HR ALIGN=LEFT> I got a PhD in Physics from the Venezuelan Institute for Research (IVIC), with a recognized diploma in Europa. I have 7 years of experience among 4 Postdoctoral positions in Europe. As a second background, I have complemented my PhD following several courses on Sociology (the first three years of this major). I also have a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups (in mathematics, finance, geography, engineering, biology, etc ). Currently, I am Visiting Fellow at the Complexity Institute. NTU. Singapore. </HR>
-</HH1> 
-
+<HR ALIGN=LEFT> I got a PhD in Physics from the Venezuelan Institute for Research (IVIC), with a recognized diploma in Europa. I have 7 years of experience among 4 Postdoctoral positions in Europe. As a second background, I have complemented my PhD following several courses on Sociology (the first three years of this major). I also have a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups. Currently, I am Visiting Fellow at the Complexity Institute. NTU. Singapore. </HR> 
 
 <H2 ALIGN=CENTER> <img src="yo.png" WIDTH=250/>  
 <span style="display:inline-block; width: 2cm;"></span>
 <img src="dicho.png" WIDTH=350/> </H2> 
 
-<HH1>
 <HR ALIGN=LEFT>
 My main interest in research is the application of statistical and Critical Phenomena approaches to emergent social phenomena. The possibility of finding universal patterns, i.e, same qualitative behavior in different kind of phenomena. The similarity comes from the fact that collective emerging phenomena do not depend on the microscopic details of the process. The determinant properties are instead the symmetries, dimensionality, and conserved quantities. The theory implied on this methodology is the foundation for the field of Critical Phenomena, which has proved to be fruitful in allowing for the understanding of several patterns of universality.<P>
 
-
 The use of statistical methods has allowed for major advances in this area, by providing a bridge between the microscopic interactions and the large collective behavior of the system. My initial research activities were focused on agent based models. Making the analogy with social systems, is how I could see the emergent phenomena as a consequence of well-thought local rules among the interacting particles, which in the case of social phenomena are interacting human beings. After several works on this direction, I started with data science, as the only way for seeking what kind of patterns regarding human behavior is expressed by the data. </HR> 
-</HH1> 
 
 <!-- Esto es un comentario al código que no se verá en pantalla -->
 
