--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 ygandica@gmail.com   <p>
 Center for Research in Finance and Management 
 Universit&eacute de Namur. Address: <p>
-Rempart de la Vierge, 8. B&acirctiment Sciences &eacuteconomiques, sociales et de gestion. Porte 407. 5000. <p> Namur. Belgium<p>
+Rempart de la Vierge, 8. B&acirctiment Sciences &eacuteconomiques, sociales et de gestion. Porte 407. 5000. Namur. Belgium<p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
