--- a/old_publications.html
+++ b/old_publications.html
@@ -1,30 +1,11 @@
-<LINK rel="stylesheet" href="main.css">
-
 <HTML><HEAD><TITLE>Publications</TITLE></HEAD>
-<BODY  text="black" TEXT="#AA0000">
+<BODY BACKGROUND="base.jpg" text="black" TEXT="#AA0000">
 <CENTER><H1>Publications</H1></CENTER>
 
-<div class="container-grid">
-  <div class="col col-1">    
-<h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
-<font size="-1"> Yérali Gandica <font size="-1"> 
-ygandica@gmail.com   <p>
-Center for Research in Finance and Management 
-Universit&eacute de Namur.  <p>Address:
-Rempart de la Vierge, 8. B&acirctiment Sciences &eacuteconomiques, sociales et de gestion. Porte 407. 5000. Namur. Belgium<p>
- <font color="009900">ORCID ID:</font> 
-<a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
-<a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
-<font color="0099FF"> twitter.com/ygandica</font>   <p>
-
-
-
-
-</p></h2></div>
-  <div class="col col-2">
+<span style="display:block; height: 1cm;"></span>
 
 </P><UL>
-<LI> [20] A high&#45dimensional space&#45time analysis: Trucks in Belgium. Y&eacuterali Gandica, Isabelle Thomas and Jean&#45Charles Delvenne. Work in progress.
+<LI> [20] An high&#45dimensional temporal analysis: Trucks in Belgium. Y&eacuterali Gandica, Isabelle Thomas and Jean&#45Charles Delvenne. Work in progress.
 <LI> [19] Financial institutions vulnerability: assessing the role of intra and inter&#45community dependences. Y&eacuterali <u>Gandica</u>,
 Marco Geraci, Sophie B&eacutereau and Jean&#45Yves Gnabo. In writing process.
 <LI> [18] Community detection on aggregated data. Adeline Decuyper, Y&eacuterali <u>Gandica</u>, Christophe Cloquet, Isabelle Thomas and
@@ -74,8 +55,6 @@ Mussot, Gerardo V&aacutesquez and Sergio Rojas, Physica A <b> 389</b> 24, 5864 &
 Luis Cabrera. Physica A <b> 389</b> 19, 4172­4176 (2010). 
 
 </OL>
-
-</div>
 
 
 </BODY></HTML>
