--- a/course.html
+++ b/course.html
@@ -1,6 +1,28 @@
+<LINK rel="stylesheet" href="main.css">
+
 <HTML><HEAD><TITLE>Introduction to network science</TITLE></HEAD> <BODY BACKGROUND="networks2.png" text="black" TEXT="#AA0000">
 
-<CENTER><H1>Introduction to Network Science</H1></CENTER><HR>Introductory tutorial aimed at any researcher interested on getting  started into the fields of Network Science. We will begin by installing some basic packages and talking about elemental notions. However, the level of learning will be quickly progressing, addressing the key topics, until arriving at the current subjects of research.<P> 
+<CENTER><H1>Introduction to Network Science</H1></CENTER>
+
+<div class="container-grid">
+  <div class="col col-1">    
+<h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
+<font size="-1"> Yérali Gandica <font size="-1"> 
+ygandica@gmail.com   <p>
+Center for Research in Finance and Management 
+Universit&eacute de Namur.  <p>Address:
+Rempart de la Vierge, 8. B&acirctiment Sciences &eacuteconomiques, sociales et de gestion. Porte 407. 5000. Namur. Belgium<p>
+ <font color="009900">ORCID ID:</font> 
+<a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
+<a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
+<font color="0099FF"> twitter.com/ygandica</font>   <p>
+
+</p></h2></div>
+  <div class="col col-2">
+
+
+
+<HR>Introductory tutorial aimed at any researcher interested on getting  started into the fields of Network Science. We will begin by installing some basic packages and talking about elemental notions. However, the level of learning will be quickly progressing, addressing the key topics, until arriving at the current subjects of research.<P> 
 
 The only prerequisites for the course are knowing python, curiosity and being willing to learn! For a better benefit of the course, it is recommended to have the programs already installed on your computers. The programs\packages are:
 
@@ -15,5 +37,7 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 </OL>
 
 <CENTER><H2>  <font size="6">     <font color="blue">   Material to download is coming up soon!!!!   </font> </font> </H1>  
+
+</div>
 
 </BODY></HTML>
