--- a/course.html
+++ b/course.html
@@ -1,8 +1,15 @@
+<HTML>
+<HEAD><TITLE>Introduction to network science </TITLE>
+
 <LINK rel="stylesheet" href="main.css">
 
-<HTML><HEAD><TITLE>Introduction to network science</TITLE></HEAD> <BODY BACKGROUND="networks2.png" text="black" TEXT="#AA0000">
+</HEAD>
 
-<CENTER><H1>Introduction to Network Science</H1></CENTER>
+<BODY> 
+  <!-- <SECTION style="background: #ff66ff"> -->
+    <SECTION>
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Introduction to Network Science <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  </A> </H1>
+</SECTION>
 
 <div class="container-grid">
   <div class="col col-1">    
