--- a/publications.html
+++ b/publications.html
@@ -1,8 +1,20 @@
+<HTML>
+<HEAD><TITLE>Publications </TITLE>
+
 <LINK rel="stylesheet" href="main.css">
 
-<HTML><HEAD><TITLE>Publications</TITLE></HEAD>
-<BODY  text="black" TEXT="#AA0000">
-<CENTER><H1>Publications</H1></CENTER>
+</HEAD>
+
+<BODY> 
+  <!-- <SECTION style="background: #ff66ff"> -->
+    <SECTION>
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Y&eacuterali Gandica - Publications <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="course.html"> <FONT SIZE=+1>Tutorials </FONT>  </A> </H1>
+</SECTION>
+
+
+
+
+
 
 <div class="container-grid">
   <div class="col col-1">    
