--- a/course.html
+++ b/course.html
@@ -43,7 +43,35 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 </OL>
 
-<CENTER><H2>  <font size="6">     <font color="blue">   Material to download is coming up soon!!!!   </font> </font> </H1>  
+<CENTER><H2>  <font size="5">     <font color="blue">   Schedule   </font> </font> </H2>  </CENTER>
+
+</P><UL>
+
+<LI>  <u> Session I (9 am – 10.30 am) : </u> 
+
+<LI>  Networks: definition and basic properties.
+
+<LI>  Particularities of some networks.
+
+ <LI> Visualizations.
+
+ <LI> Main centrality measurements.
+
+ <LI> Let us calculate some centrality measurements over a small example.
+
+<LI>  <u> Session II (11 am – 12.30pm): </u> 
+
+<LI>  Let us generate some synthetic networks.
+
+<LI>  Community detection methods: Differences between the main approaches.
+
+ <LI> Temporal networks: Why? Some temporal centrality measures.
+
+ <LI> Second-order metrics: What are they about?
+
+ <LI> (if we still have time) Hands-On session: Gathering some networks and measuring their properties.
+
+</OL>
 
 </div>
 
