--- a/course.html
+++ b/course.html
@@ -73,6 +73,8 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 </OL>
 
+<CENTER><H2>  <font size="5">     <font color="grey">   Material for the workshop can be downloaded at ... <a href="https://github.com/yerali/ic2s2_intro_networks_science_tutorial"> Repo: </a>   <p>   </font> </font> </H2>  </CENTER>
+
 </div>
 
 </BODY></HTML>
