--- a/course.html
+++ b/course.html
@@ -37,9 +37,19 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 <LI>  Python,
 
-<LI>  NetworkX &#x2192; pip install networkx &#x3d; &#x3d; 2.2
+<LI>  NetworkX &#x2192; pip install networkx &#x3d; &#x3d; 2.3
 
 <LI>  Community detection for NetworkX (louvain method) &#x2192; pip install python-louvain.</P>
+
+</OL>
+
+<CENTER><H2>  <font size="5">     <font color="black">   Editions   </font> </font> </H2>  </CENTER>
+
+</P><UL>
+
+<LI> Introduction to Network Science and models of social dynamics. Nanyang Technological University. Singapore, 7-8 March, 2019.
+
+<LI> Introduction to Network Science. 5th International Conference on Computational Social Science IC2S2 2019. The Netherlands, 17 July 2019.
 
 </OL>
 
@@ -47,7 +57,7 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 </P><UL>
 
-<LI>  <u> Session I (9 am – 10.30 am) : </u> 
+<LI>  <u> Session I : </u> 
 
 <LI>  Networks: definition and basic properties.
 
@@ -59,7 +69,7 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
  <LI> Let us calculate some centrality measurements over a small example.
 
-<LI>  <u> Session II (11 am – 12.30pm): </u> 
+<LI>  <u> Session II: </u> 
 
 <LI>  Let us generate some synthetic networks.
 
