--- a/course.html
+++ b/course.html
@@ -85,6 +85,8 @@ The only prerequisites for the course are knowing python, curiosity and being wi
 
 <CENTER><H2>  <font size="5">     <font color="grey">   Material for the workshop can be downloaded at ... <a href="https://github.com/yerali/ic2s2_intro_networks_science_tutorial"> Repo: </a>   <p>   </font> </font> </H2>  </CENTER>
 
+<CENTER><H2>  <font size="5">     <font color="grey">   Material for the Tutorial on Social-related models can be downloaded at ... <a href="https://github.com/yerali/social_related_agent_based_models_tutorial"> Repo: </a>   <p>   </font> </font> </H2>  </CENTER>
+
 </div>
 
 </BODY></HTML>
