--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
 Laboratoire de Physique Théorique et Modélisation (LPTM) <p>
-Université de Cergy Pontoise (UCP) 
-95000 Paris, France
+Université de Cergy Pontoise (UCP) <p>
+95000 Paris, France <p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
