--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
+Assistant Professor (Enseignant-Chercheur)
 Laboratoire de Physique Théorique et Modélisation (LPTM) <p>
 Université de Cergy Pontoise (UCP) <p>
 95000 Paris, France <p>
