--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Assistant Professor (Enseignant-Chercheur)
+Assistant Professor (Enseignant-Chercheur) <p>
 Laboratoire de Physique Théorique et Modélisation (LPTM) <p>
-Université de Cergy Pontoise (UCP) <p>
+Université de Cergy Pontoise (UCP)
 95000 Paris, France <p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
