--- a/course.html
+++ b/course.html
@@ -11,14 +11,15 @@
  <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Introduction to Network Science <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  </A> </H1>
 </SECTION>
 
-<div class="container-grid">
+ <div class="container-grid">
   <div class="col col-1">    
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Center for Research in Finance and Management 
-Universit&eacute de Namur.  <p>Address:
-Rempart de la Vierge, 8. B&acirctiment Sciences &eacuteconomiques, sociales et de gestion. Porte 407. 5000. Namur. Belgium<p>
+Assistant Professor (Enseignant-Chercheur) <p>
+Laboratoire de Physique Théorique et Modélisation (LPTM) <p>
+Université de Cergy Pontoise (UCP)
+95000 Paris, France <p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
