--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@ Université de Cergy Pontoise (UCP)
 </P><UL>
 <LI> [21] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Work in progress.
 <LI> [20] A high&#45dimensional space&#45time analysis: Trucks in Belgium. Y&eacuterali Gandica, Isabelle Thomas and Jean&#45Charles Delvenne. Work in progress.
-<LI> [19] Financial institutions vulnerability: assessing the role of intra and inter&#45community dependences. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf
+<LI> [19] A multilevel analysis to systemic exposure: insights from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf
 <LI> [18] Community detection on aggregated data. Adeline Decuyper, Y&eacuterali <u>Gandica</u>, Christophe Cloquet, Isabelle Thomas and
 Jean&#45Charles Delvenne.\\ https://arxiv.org/abs/1809.08855. Submitted (2019)
 <LI> [17] Population&#39s preferences trough Wikipedia edits.  
