--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ background, I have complemented my PhD following several courses on
 Sociology (the first three years of this major). I also have a broad 
 experience working in computational social science, Big Data and network
  science among several interdisciplinary groups (in mathematics, 
-finance, geography, engineering, biology, etc ). Currently, I am 
-Visiting Fellow at the Complexity Institute. NTU. Singapore. 
+finance, geography, engineering, biology, etc). 
 </hh1> 
 
 <h2 align="CENTER"> <img src="yo.png" width="250/">  
