--- a/publications.html
+++ b/publications.html
@@ -37,14 +37,13 @@ Université de Cergy Pontoise (UCP)
   <div class="col col-2">
 
 </P><UL>
-<LI> [21] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Work in progress.
-<LI> [20] A high&#45dimensional space&#45time analysis: Trucks in Belgium. Y&eacuterali Gandica, Isabelle Thomas and Jean&#45Charles Delvenne. Work in progress.
-<LI> [19] A multilevel analysis to systemic exposure: insights from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf
-<LI> [18] Community detection on aggregated data. Adeline Decuyper, Y&eacuterali <u>Gandica</u>, Christophe Cloquet, Isabelle Thomas and
-Jean&#45Charles Delvenne.\\ https://arxiv.org/abs/1809.08855. Submitted (2019)
+
+<LI> [21] A high&#45dimensional space&#45time analysis: Trucks in Belgium. Y&eacuterali Gandica, Isabelle Thomas and Jean&#45Charles Delvenne. Work in progress.
+<LI> [20] A multilevel analysis to systemic exposure: insights from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf. Submitted 2019
+<LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Accepted Phys. Rev. E (2020).
+<LI> [18] Measuring the effect of node aggregation on community detection. Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne. EPJ Data Sci. 9, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020)
 <LI> [17] Population&#39s preferences trough Wikipedia edits.  
-Y&eacuterali <u>Gandica</u>. \\ https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\
- DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018)
+Y&eacuterali <u>Gandica</u>. \\ https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018)
  <LI>[16] Fragmentation, integration and macroprudential surveillance of the US financial industry: 
 Insights from network science. Y&eacuterali <u>Gandica</u>, Marco Geraci, Sophie B&eacutereau and  Jean&#45Yves Gnabo. 
 PLoS ONE <b> 13</b>(4): e0195110. \\
