adding short BIO

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ finance, geography, engineering, biology, etc). <b>CV upon request </b>.
 
 <LI> Jan 2019-April 2019. <b> Visiting Fellow</b>. Complexity Institute. Nanyang Technological University (NTU). Singapore. <p>
 
-<LI> 2019-2022.  <b> Assistance Professor</b>. Laboratoire de Physique Théorique et Modélisation (LPTM). Physics department. Université de Cergy Pontoise. Paris, France. <p>
+<LI> 2019-2022.  <b> Assistance Professor</b>. Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France. <p>
 
 </OL>
 
