--- a/publications.html
+++ b/publications.html
@@ -40,8 +40,8 @@ Université de Cergy Pontoise (UCP)
 <LI> [22] The distance-aware Axelrod Model. Yérali Gandica, Petter Holme and Silvia Chiacchiera (Work in progress).
 <LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali Gandica, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew (In writing process).
 <LI> [20] A multilevel analysis to systemic exposure: insights from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf. Submitted 2019.
-<LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Phys. Rev. E. 101, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020).
-<LI> [18] Measuring the effect of node aggregation on community detection. Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne. EPJ Data Sci. 9, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020)
+<LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020).
+<LI> [18] Measuring the effect of node aggregation on community detection. Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne. EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020)
 <LI> [17] Population&#39s preferences trough Wikipedia edits.  
 Y&eacuterali <u>Gandica</u>. \\ https://ieeexplore.ieee.org/document/8554724. 2018 Fifth International Conference on Social Networks Analysis, Management and Security (SNAMS) \\  DOI: 10.1109/SNAMS.2018.8554724. https://arxiv.org/abs/1809.08513 (2018)
  <LI>[16] Fragmentation, integration and macroprudential surveillance of the US financial industry: 
