--- a/index_RESPALDO.html
+++ b/index_RESPALDO.html
@@ -22,6 +22,7 @@ Université de Cergy Pontoise (UCP)
 95000 Paris, France <p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
+<a href="https://publons.com/researcher/2587328/yerali-c-gandica-lopez/">Publons</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
 <font color="0099FF"> twitter.com/ygandica</font>   <p>
 
@@ -32,22 +33,7 @@ Université de Cergy Pontoise (UCP)
   <div class="col col-2">
 
 <hh1>
-<hr align="LEFT"> I got a PhD in Physics from the Venezuelan Institute 
-for Research (IVIC), with a recognized diploma in Europa. I have 7 years
- of experience among 4 Postdoctoral positions in Europe. As a second 
-background, I have complemented my PhD following several courses on 
-Sociology (the first three years of this major). I also have a broad 
-experience working in computational social science, Big Data and network
- science among several interdisciplinary groups (in mathematics, 
-finance, geography, engineering, biology, etc). 
-</hh1> 
-
-<h2 align="CENTER"> <img src="yo.png" width="250/">  
-<span style="display:inline-block; width: 2cm;"></span>
-<img src="dicho.png" width="350/"> </h2> 
-
-<hh1>
-<hr align="LEFT">
+<hr align="LEFT"> 
 My main interest in research is the application of statistical and 
 Critical Phenomena approaches to emergent social phenomena. The 
 possibility of finding universal patterns, i.e, same qualitative 
@@ -70,7 +56,41 @@ case of social phenomena are interacting human beings. After several
 works on this direction, I started with data science, as the only way 
 for seeking what kind of patterns regarding human behavior is expressed 
 by the data.  
- 
+</hh1> 
+
+<h2 align="CENTER"> <img src="yo.png" width="250/">  
+<span style="display:inline-block; width: 2cm;"></span>
+<img src="dicho.png" width="350/"> </h2> 
+
+<hh1>
+<hr align="LEFT">
+<p>
+I got a PhD in Physics from the Venezuelan Institute 
+for Research (IVIC). I spent 7 years of experience among 
+4 Postdoctoral positions in Europe. As a second 
+background, I have complemented my PhD following several courses on 
+Sociology (the first three years of this major). I have a broad 
+experience working in computational social science, Big Data and network
+ science among several interdisciplinary groups (in mathematics, 
+finance, geography, engineering, biology, etc). <b>CV upon request </b>.
+
+<CENTER><H2>  <font size="5">     <font color="black">   Short BIO   </font> </font> </H2>  </CENTER>
+
+</P><UL>
+
+<LI> 2012-2014.  <b> Postdoctoral Researcher</b>. Center for Computational Physics. Department of Physics. Univ. Coimbra, Portugal. <p>
+
+<LI> 2014-2016. <b> Postdoctoral Researcher</b>. Department of Mathematics and naXys. University of Namur, Belgium. <p>
+
+<LI> 2016-2017. <b> Postdoctoral Researcher</b>. Department of Business. CeReFiM and naXys. University of Namur, Belgium. <p>
+
+<LI> Jan 2018-Dec 2018. <b> Associate Scientific Researcher</b>. Center for Operations Research and Econometrics (CORE) & Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM). Université catholique de Louvain. Louvain-la-Neuve. Belgium. <p>
+
+<LI> Jan 2019-April 2019. <b> Visiting Fellow</b>. Complexity Institute. Nanyang Technological University (NTU). Singapore. <p>
+
+<LI> 2019-2022.  <b> Assistance Professor</b>. Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France. <p>
+
+</OL>
 
 
 </p></hh1></div>
