--- a/tutorials.html
+++ b/tutorials.html
@@ -16,12 +16,13 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Assistant Professor (Enseignant-Chercheur) <p>
-Laboratoire de Physique Théorique et Modélisation (LPTM) <p>
-Université de Cergy Pontoise (UCP)
-95000 Paris, France <p>
+Assistant Professor <br> (Enseignant-Chercheur) <p>
+Laboratoire de Physique Théorique et Modélisation (LPTM).
+Physics department & International Bachelor <p>
+CY Cergy Paris Université. Paris, 95000. France.<p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
+<a href="https://publons.com/researcher/2587328/yerali-c-gandica-lopez/">Publons</a>   <p>
 <a href="https://scholar.google.fr/citations?hl=fr&user=gbWlX60AAAAJ">Google Scholar</a>   <p>
 <font color="0099FF"> twitter.com/ygandica</font>   <p>
 
