--- a/index_hasta_4_oct.html
+++ b/index_hasta_4_oct.html
@@ -65,14 +65,33 @@ by the data.
 
 <hh1>
 <hr align="LEFT">
+<p>
+I got a PhD in Physics from the Venezuelan Institute 
+for Research (IVIC). I spent 7 years of experience among 
+4 Postdoctoral positions in Europe. As a second 
+background, I have complemented my PhD following several courses on 
+Sociology (the first three years of this major). I have a broad 
+experience working in computational social science, Big Data and network
+ science among several interdisciplinary groups (in mathematics, 
+finance, geography, engineering, biology, etc). <b>CV upon request </b>.
 
 <CENTER><H2>  <font size="5">     <font color="black">   Short BIO   </font> </font> </H2>  </CENTER>
 
-<p>
-<font size="3">     <font color="black"> 
-Yérali Gandica is currently an Assistant Professor at the Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France. YG hold a degree in Physics from the Universidad Simón Bolívar (Caracas-Venezuela) and a PhD in Physics from the Venezuelan Institute for Research (IVIC). Then, she spend 7 years among 4 Postdoctoral positions in Europe. First, at the Center for Computational Physics in the Universidade de Coimbra, Portugal. There she started studies on Agent-based models and Big Data. Secondly, she got a Postdoctoral fellow at the Namur Center for Complex Systems (naXys) at the Mathematics Department of the University of Namur, where she worked on Agent-based models (ABM) and started on Network Science. After, she joined the Center for Research in Finance and Management (CeReFiM), at the Business Department of the Faculty of Economics, Social Sciences and Business Administration in the Université de Namur. During that Postdoctoral fellowship, YG started applying the concepts of Network Science to financial data. Later on, she worked an an Associate Scientific Researcher at the Center for Operations Research and Econometrics (CORE) and at Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM) Université catholique de Louvain, working on Geo-localised Data. As a second academic formation, YG has complemented her PhD following several courses on Sociology (the first three years of this major). YG also has a broad experience working in computational social science, Big Data and network science among several interdisciplinary groups (mathematics, finance, geography, engineering and biology).
+</P><UL>
 
+<LI> 2012-2014.  <b> Postdoctoral Researcher</b>. Center for Computational Physics. Department of Physics. Univ. Coimbra, Portugal. <p>
 
+<LI> 2014-2016. <b> Postdoctoral Researcher</b>. Department of Mathematics and naXys. University of Namur, Belgium. <p>
+
+<LI> 2016-2017. <b> Postdoctoral Researcher</b>. Department of Business. CeReFiM and naXys. University of Namur, Belgium. <p>
+
+<LI> Jan 2018-Dec 2018. <b> Associate Scientific Researcher</b>. Center for Operations Research and Econometrics (CORE) & Institute of Information and Communication Technologies, Electronics and Applied Mathematics (ICTEAM). Université catholique de Louvain. Louvain-la-Neuve. Belgium. <p>
+
+<LI> Jan 2019-April 2019. <b> Visiting Fellow</b>. Complexity Institute. Nanyang Technological University (NTU). Singapore. <p>
+
+<LI> 2019-2022.  <b> Assistance Professor</b>. Laboratoire de Physique Théorique et Modélisation (LPTM) - Physics department & International Bachelor. CY Cergy Paris Université. Paris, France. <p>
+
+</OL>
 
 
 </p></hh1></div>
