adding tutorial Bash-scripts techniques for big data

--- a/tutorials.html
+++ b/tutorials.html
@@ -33,6 +33,16 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2>  <font color="blue"> Clique on the figure to go to the last version of each tutorial </H2>  </CENTER>
 
+<CENTER><H2>  <font size="5">     <font color="black">  Bash-scripts techniques for big data   </font> </font> </H2>  </CENTER>
+
+<CENTER><H2> <a href="https://github.com/yerali/bash_scripts_to_big_data"> <input type="image" src="data.jpg" width="275/" /> </a> </H2>  </CENTER>
+
+<CENTER><H2>  <font size="5">     <font color="black">  Editions    </font> </font> </H2>  </CENTER>
+
+</P><UL>
+
+<LI> Bash-scripts techniques for big data. Contemporary Issue Module(s). International Bachelor in Data Science. CY Cergy Paris Université , 19-23 October 2020
+
 <CENTER><H2>  <font size="5">     <font color="black">   Introduction to Network Science   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <a href="https://yerali.github.io/course.html"> <input type="image" src="networks.png" /> </a> </H2>  </CENTER>
