adding tutorial Bash-scripts techniques for big data

--- a/tutorials.html
+++ b/tutorials.html
@@ -36,6 +36,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 <CENTER><H2>  <font size="5">     <font color="black">  Bash-scripts techniques for big data   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <a href="https://github.com/yerali/bash_scripts_to_big_data"> <input type="image" src="data.jpg" width="275/" /> </a> </H2>  </CENTER>
+<CENTER><H2> <font size="2"> <font color="green"> (figure taken from https://www.lebigdata.fr/data-science-definition) </font> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="5">     <font color="black">  Editions    </font> </font> </H2>  </CENTER>
 
