adding tutorial Bash-scripts techniques for big data

--- a/tutorials.html
+++ b/tutorials.html
@@ -33,7 +33,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2>  <font color="blue"> Clique on the figure to go to the last version of each tutorial </H2>  </CENTER>
 
-<CENTER><H2>  <font size="5">     <font color="black">  Bash-scripts techniques for big data   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="6">     <font color="black">  <u> Bash-scripts techniques for big data  </u>  </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <a href="https://github.com/yerali/bash_scripts_to_big_data"> <input type="image" src="data.jpg" width="275/" /> </a> </H2>  </CENTER>
 <CENTER><H2> <font size="2"> <font color="green"> (figure taken from https://www.lebigdata.fr/data-science-definition) </font> </H2>  </CENTER>
@@ -42,9 +42,9 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 </P><UL>
 
-<LI> Bash-scripts techniques for big data. Contemporary Issue Module(s). International Bachelor in Data Science. CY Cergy Paris Université , 19-23 October 2020
+<LI> Bash-scripts techniques for big data. Contemporary Issue Module(s). International Bachelor in Modelling and Data Science. CY Cergy Paris Université , 19-23 October 2020
 
-<CENTER><H2>  <font size="5">     <font color="black">   Introduction to Network Science   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="6">     <font color="black"> <u>   Introduction to Network Science </u>   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <a href="https://yerali.github.io/course.html"> <input type="image" src="networks.png" /> </a> </H2>  </CENTER>
 
@@ -56,11 +56,11 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <LI> Introduction to Network Science. 5th International Conference on Computational Social Science IC2S2 2019. The Netherlands, 17 July 2019.
 
-<LI> Introduction to Network Science. Contemporary Issue Module(s). https://eisti.fr/ , 3-7 February 2020
+<LI> Introduction to Network Science. Contemporary Issue Module(s). International Bachelor in Modelling and Data Science. CY Cergy Paris Université, 3-7 February 2020
 
 </OL>
 
-<CENTER><H2>  <font size="5">     <font color="black">   Social-related Agent-Based Models (ABM)  </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="6">     <font color="black">  <u>  Social-related Agent-Based Models (ABM) </u>  </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <a href="https://github.com/yerali/social_related_agent_based_models_tutorial"> <input type="image" src="fig2.png" width="250/" /> </a> </H2>  </CENTER>
 
@@ -70,7 +70,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <LI> Models of social dynamics. Nanyang Technological University. Singapore, 8 March, 2019.
 
-<LI> Agent-based models: Theory and applications. Contemporary Issue Module(s). https://eisti.fr/ , 21-25 October 2019. 
+<LI> Agent-based models: Theory and applications. Contemporary Issue Module(s). International Bachelor in Modelling and Data Science. CY Cergy Paris Université, 21-25 October 2019. 
 
 </OL>
 
