adding tutorial Bash-scripts techniques for big data

--- a/tutorials.html
+++ b/tutorials.html
@@ -31,7 +31,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 
 
-<CENTER><H2>  <font color="blue"> Clique on the figure to go to the last version of each tutorial </H2>  </CENTER>
+<CENTER><H2>  <font color="red"> Clique on the figure to go to the last version of each tutorial  </font> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="6">     <font color="black">  <u> Bash-scripts techniques for big data  </u>  </font> </font> </H2>  </CENTER>
 
