--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,8 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 </P><UL>
 <LI> [22] The distance-aware Axelrod Model. Yérali Gandica, Petter Holme and Silvia Chiacchiera (Work in progress).
 <LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali Gandica, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew (In writing process).
-<LI> [20] A multilevel analysis to systemic exposure: insights from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. \\  https://arxiv.org/pdf/1910.08611.pdf. Submitted 2019.
+<LI> [20] A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. Scientific Reports, <b> 10</b>,
+17657. https://doi.org/10.1038/s41598-020-74259-7 (2020).
 <LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020).
 <LI> [18] Measuring the effect of node aggregation on community detection. Y&eacuterali <u>Gandica</u>, Adeline Decuyper, Christophe Cloquet, Isabelle Thomas and Jean-Charles Delvenne. EPJ Data Sci. <b>9 </b>, 6 https://doi.org/10.1140/epjds/s13688-020-00223-0 (2020)
 <LI> [17] Population&#39s preferences trough Wikipedia edits.  
