--- a/publications.html
+++ b/publications.html
@@ -38,8 +38,10 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
   <div class="col col-2">
 
 </P><UL>
-<LI> [22] The distance-aware Axelrod Model. Yérali Gandica, Petter Holme and Silvia Chiacchiera (Work in progress).
-<LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali Gandica, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew (In writing process).
+<LI> [24] Signs of universal patterns in Social explosions. Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali Gandica (Work in progress).
+<LI> [23] The distance-aware Axelrod Model. Yérali Gandica, Petter Holme and Silvia Chiacchiera (Work in progress).
+<LI> [22] 22 The consequences of hesitation: Axelrod model with intrinsic noise. Rémi Perrier, Yérali Gandica and Laura Hernández (In writing process).
+<LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali Gandica, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew Submitted 2021. https://arxiv.org/pdf/2103.04466.pdf
 <LI> [20] A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. Scientific Reports, <b> 10</b>,
 17657. https://doi.org/10.1038/s41598-020-74259-7 (2020).
 <LI> [19] The free and freer XY models. Petter Holme and Y&eacuterali <u>Gandica</u>. Phys. Rev. E. <b>101</b>, 032311. https://doi.org/10.1103/PhysRevE.101.032311 (2020).
