--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@
 <BODY> 
   <!-- <SECTION style="background: #ff66ff"> -->
     <SECTION>
- <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Tutorials <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  </A> </H1>
+ <H1 ALIGN=CENTER> <span style="display:inline-block; width: 5cm;"></span> Tutorials <span style="display:inline-block; width: 4cm;"></span> <A HREF="index.html"> <FONT SIZE=+1>homepage </FONT>  &emsp; </A>  <A HREF="publications.html"> <FONT SIZE=+1>Publications </FONT>  </A> &emsp; <A HREF="mentoring.html"> <FONT SIZE=+1> Mentoring </FONT>  </A> </H1>
 </SECTION>
 
  <div class="container-grid">
