--- a/mentoring.html
+++ b/mentoring.html
@@ -33,9 +33,15 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2>  <font size="6">     <font color="black">  Multispin interaction models   </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Maxime Lucas-Guerreau. Master-1. Physics Department. University Cergy-Pontoise.   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Maxime Lucas-Guerreau. Master-1. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <input type="image" src="max.png" width="275/" /> </a> </H2>  </CENTER>
+
+<CENTER><H2>  <font size="6">     <font color="black">  Wikipedia Editing Preferences: A dynamic study   </font> </font> </H2>  </CENTER>
+
+<CENTER><H2>  <font size="3">     <font color="black">  Julien Assuied. 3rd-year. International Bachelor in Data Science. CY-Tech Paris-Université.  </font> </font> </H2>  </CENTER>
+
+<CENTER><H2> <input type="image" src="julien.png" width="500/" /> </a> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="6">     <font color="black"> <u>   Continuous Opinion Dynamics on Bilayer Temporal Networks </u>   </font> </font> </H2>  </CENTER>
 
@@ -47,7 +53,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2>  <font size="6">     <font color="black">  <u>  Effect of the limit of attention on the Axelrod Model </u>  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Rémi Perrier. Master-2. Physics Department. Université de Cergy-Pontoise.   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Rémi Perrier. Master-2. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2>  <font size="3">     <font color="black">  (Co-tutoring with Prof. Laura Hernández)   </font> </font> </H2>  </CENTER>
 
@@ -55,7 +61,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2>  <font size="6">     <font color="black">  <u>  The Axelrod model </u>  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Rahima Zouhhad L3. Physics Department. Université de Cergy-Pontoise.   </font> </font> </H2>  </CENTER>
+<CENTER><H2>  <font size="3">     <font color="black">  Rahima Zouhhad L3. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
 
 <CENTER><H2> <input type="image" src="rahima.png" width="300/" /> </a> </H2>  </CENTER>
 
