--- a/teaching.html
+++ b/teaching.html
@@ -31,6 +31,13 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
   
   <CENTER><H2>  <font size="6">     <font color="black">  <u> Courses Taught at CY Cergy Paris Université </u>  </font> </font> </H2>  </CENTER>
   
+  <H2>  <font size="5">     <font color="black">  2021-2022. Semester 2    </font> </font> </H2> 
+
+
+<LI> Physique moderne (CM + TD) CY-Tech.
+<LI> Ondes (TD) CY-Tech.
+<LI> L'architecture des ordinateurs (CM + TD) CY-Tech: deux groupes.
+  
  <H2>  <font size="5">     <font color="black">  2021-2022. Semester 1    </font> </font> </H2> 
 
 
