adding repository archi_ordis

--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <LI> Physique moderne (CM + TD) CY-Tech.
 <LI> Ondes (TD) CY-Tech.
-<LI> L'architecture des ordinateurs (CM + TD) CY-Tech: deux groupes.
+<a href="https://github.com/yerali/course_archi_ordi.git"> <LI> L'architecture des ordinateurs (CM + TD) CY-Tech: deux groupes. </a>   <p>
   
  <H2>  <font size="5">     <font color="black">  2021-2022. Semester 1    </font> </font> </H2> 
 
