--- a/publications.html
+++ b/publications.html
@@ -38,9 +38,10 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
   <div class="col col-2">
 
 </P><UL>
+<LI> [25] The distance-aware Axelrod Model. Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera (Work in progress).
 <LI> [24] Signs of universal patterns in Social explosions. Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> (Work in progress).
-<LI> [23] The distance-aware Axelrod Model. Yérali <u>Gandica</u>, Petter Holme and Silvia Chiacchiera (Work in progress).
-<LI> [22] 22 The consequences of hesitation: Axelrod model with intrinsic noise. Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández. PLoS ONE 16(11): e0259295. DOI:10.1371/journal.pone.0259295 (2021).
+<LI> [23] Detection and effect of social events on Wikipedia data-set for studying human preferences. Julien Assuied and Yérali <u>Gandica</u>. Submitted.
+<LI> [22] The consequences of hesitation: Axelrod model with intrinsic noise. Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández. PLoS ONE 16(11): e0259295. DOI:10.1371/journal.pone.0259295 (2021).
 <LI> [21] Bali ancient rice terraces: A Hamiltonian approach. Yérali <u>Gandica</u>, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung and Lock Yue Chew Phys. Rev.Lett. <b>127</b>, 168301. https://doi.org/10.1103/PhysRevLett.127.168301 (2021).
 <LI> [20] A multilevel analysis of financial institutions’ systemic exposure from local and system-wide information. Y&eacuterali <u>Gandica</u>, Sophie B&eacutereau and Jean&#45Yves Gnabo. Scientific Reports, <b> 10</b>,
 17657. https://doi.org/10.1038/s41598-020-74259-7 (2020).
