updating PhD mentoring

--- a/mentoring.html
+++ b/mentoring.html
@@ -29,6 +29,11 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 </p></h2></div>
   <div class="col col-2">
 
+<CENTER><H2>  <font size="6">     <font color="black">  <u>  Regional and global economic integration of Ethiopia in the 21st century </u>  </font> </font> </H2>  </CENTER>
+
+<CENTER><H2>  <font size="3">     <font color="black">  Tekilu Tadesse. Gent University. 2021-2023  (Co-tutoring with Prof. Prof. Luis E. C. Rocha) </font> </font> </H2>  </CENTER>
+
+<CENTER><H2> <input type="image" src="figura.png" width="900/" /> </a> </H2>  </CENTER>
 
 
 <CENTER><H2>  <font size="6">     <font color="black">  Multispin interaction models   </font> </font> </H2>  </CENTER>
@@ -59,11 +64,7 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 
 <CENTER><H2> <input type="image" src="remi.png" width="370/" /> </a> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="6">     <font color="black">  <u>  The Axelrod model </u>  </font> </font> </H2>  </CENTER>
 
-<CENTER><H2>  <font size="3">     <font color="black">  Rahima Zouhhad L3. Physics Department. CY Paris-Université. (Before Univ. Cergy-Pontoise).   </font> </font> </H2>  </CENTER>
-
-<CENTER><H2> <input type="image" src="rahima.png" width="300/" /> </a> </H2>  </CENTER>
 
 </div>
 
