--- a/publications.html
+++ b/publications.html
@@ -43,16 +43,15 @@ CY Cergy Paris Université. Paris, 95000. France.<p>
 (Work in progress) </PAPER> <p>
   
 <LI> <b> [25] </b> <NOM> Bounded confidence models on growing SF networks </NOM> <br />
-<PAPER> Yérali <u>Gandica</u>, Floriana Gargiulo and Guillaume Deffuant <br />
+<PAPER> Yérali <u>Gandica</u> and Guillaume Deffuant <br />
 (Work in progress) </PAPER> <p>
   
-<LI> <b> [24] </b> <NOM> Signs of universal patterns in Social explosions </NOM> <br />
-<PAPER> Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> <br />
-(Work in progress) </PAPER> <p>
+<LI> <b> [24] </b> <NOM> Signs of criticality in social explosions </NOM> <br />
+<PAPER> Mariano G. Beiró, J. Stephen Lansing, Stefan Thurner, Ning Ning Chung, Lock Yue Chew and Yérali <u>Gandica</u> <br /> (Submitted) </PAPER> <p>
 
 <LI> <b> [23] </b> <NOM> Detection and effect of social events on Wikipedia data-set for studying human preferences </NOM> <br />
 <PAPER> Julien Assuied and Yérali <u>Gandica</u><br />
-  Submitted </PAPER> <p>
+  Accepted in Frontiers in Big Data </PAPER> <p>
   
 <LI> <b> [22] </b> <NOM> The consequences of hesitation: Axelrod model with intrinsic noise </NOM> <br />
 <PAPER> Rémi Perrier, Yérali <u>Gandica</u> and Laura Hernández <br />
