--- a/tutorials.html
+++ b/tutorials.html
@@ -16,10 +16,9 @@
 <h2 align="CENTER"> <img src="yerali.png" width="100/">  <p>
 <font size="-1"> Yérali Gandica <font size="-1"> 
 ygandica@gmail.com   <p>
-Assistant Professor <br> (Enseignant-Chercheur) <p>
-Laboratoire de Physique Théorique et Modélisation (LPTM).
-Physics department & International Bachelor <p>
-CY Cergy Paris Université. Paris, 95000. France.<p>
+Associate Professor <p>
+Valencian International University <p>
+Spain<p>
  <font color="009900">ORCID ID:</font> 
 <a href="https://orcid.org/0000-0002-6262-1801">https://orcid.org/0000 &#45 0002 &#45 6262&#45 1801</a>   <p>
 <a href="https://www.webofscience.com/wos/author/record/M-6261-2013">Web of Science</a>   <p>
